--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
             <address style="display: block;"> pyzhang@cs.stanford.edu</address>
 
-            <h4>I am looking for a tenure-track Assistant Professor position. Here is my <a style="display: inline-block;" href="./CV_PengyuZhang.pdf">CV</a>, <a style="display: inline-block;" href="./RS.pdf">Research Statement</a> and <a style="display: inline-block;" href="./TS.pdf">Teaching Statement</a>.</h4>
             <ul class="nav nav-tabs"> 
                 <li class="active">
                     <a href="./index.html">Home</a>
@@ -56,11 +55,6 @@
             <div class="container">
                 <a style="display: inline-block;" href="https://dl.acm.org/citation.cfm?doid=3143361.3143374">FreeRider: Backscatter Communication Using Commodity Radios</a><br>
                 <b>Pengyu Zhang</b>, Colleen Josephson, Dinesh Bharadia, Sachin Katti<br>
-                CoNEXT 2017<br>
-            </div><br>
-            <div class="container">
-                <a style="display: inline-block;" href="https://dl.acm.org/citation.cfm?doid=3143361.3143379">Localizing Low-power Backscatter Tags Using Commodity WiFi</a><br>
-                Manikanta Kotaru, <b>Pengyu Zhang</b>, Sachin Katti<br>
                 CoNEXT 2017<br>
             </div><br>
             <div class="container">
@@ -134,7 +128,7 @@
         </div>
         <div class="container">
             <h4 class="text-left text-primary">Service</h4>
-            TPC: Infocom 2018, MobiSys 2017, SenSys 2017 (external), WearSys 2017, WinTech 2017, Mobisys PhD Forum 2014, ACM S3 workshop 2015<br><br><br>
+            TPC: CoNEXT 2018, Infocom 2018, MobiSys 2017, SenSys 2017 (external), WearSys 2017, WinTech 2017, Mobisys PhD Forum 2014, ACM S3 workshop 2015<br><br><br>
             <a href="http://www2.clustrmaps.com/counter/maps.php?url=http://web.stanford.edu/~pyzhang/" id="clustrMapsLink">
                 <img src="http://www2.clustrmaps.com/counter/index2.php?url=http://web.stanford.edu/~pyzhang/" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" onerror="this.onerror=null; this.src='http://clustrmaps.com/images/clustrmaps-back-soon.jpg'; document.getElementById('clustrMapsLink').href='http://clustrmaps.com';" />
             </a>
