--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3 class="text-left text-primary">Pengyu Zhang</h3>
             <address style="display: block;"> <br>I am a postdoc researcher at Stanford working with <a style="display: inline-block;" href="http://stanford.edu/~skatti/">Sachin Katti</a>. I received my Ph.D. from UMass Amherst. My advisor was <a style="display: inline-block;" href="http://people.cs.umass.edu/~dganesan/">Deepak Ganesan</a>. I received my bachelor and master from Tsinghua University.</address>
 
-            I design and implement low-power communication, sensing and computing systems for Internet-of-Things. I invented innovative backscatter communication technologies that provide low-power wireless connectivity, leveraged software-hardware co-design to support dedicated applications, designed runtime systems for intermittently powered computing systems, and improved the security and privacy of IoT devices.<br><br>
+            I design and build embedded systems and wireless systems for applications in the Internet-of-Things.<br><br>
 
             <address style="display: block;"> pyzhang@cs.stanford.edu</address>
 
