--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="container">
             <h4 class="text-left text-primary">Service</h4>
             TPC: CoNEXT 2018, Infocom 2018, MobiSys 2017, SenSys 2017 (external), WearSys 2017, WinTech 2017, Mobisys PhD Forum 2014, ACM S3 workshop 2015<br><br><br>
-            <a href="http://www2.clustrmaps.com/counter/maps.php?url=http://web.stanford.edu/~pyzhang/" id="clustrMapsLink">
+            <a href="http://www2.clustrmaps.com/counter/maps.php?url=https://pengyuzhang.github.io/" id="clustrMapsLink">
                 <img src="http://www2.clustrmaps.com/counter/index2.php?url=https://pengyuzhang.github.io/" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" onerror="this.onerror=null; this.src='http://clustrmaps.com/images/clustrmaps-back-soon.jpg'; document.getElementById('clustrMapsLink').href='http://clustrmaps.com';" />
             </a>
             <br />
