--- a/index.html
+++ b/index.html
@@ -129,26 +129,10 @@
         <div class="container">
             <h4 class="text-left text-primary">Service</h4>
             TPC: CoNEXT 2018, Infocom 2018, MobiSys 2017, SenSys 2017 (external), WearSys 2017, WinTech 2017, Mobisys PhD Forum 2014, ACM S3 workshop 2015<br><br><br>
-            <a href="http://www2.clustrmaps.com/counter/maps.php?url=https://pengyuzhang.github.io/" id="clustrMapsLink">
-                <img src="http://www2.clustrmaps.com/counter/index2.php?url=https://pengyuzhang.github.io/" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" onerror="this.onerror=null; this.src='http://clustrmaps.com/images/clustrmaps-back-soon.jpg'; document.getElementById('clustrMapsLink').href='http://clustrmaps.com';" />
-            </a>
+
+            <a href='https://clustrmaps.com/site/1abhx'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=n&d=LY0z3_gPNAItvplDTqmDej9vx6uHh9Dew8CNlJn9iO0'/></a>
             <br />
-            <!-- Start of StatCounter Code -->
-            <script type="text/javascript">
-                var sc_project=5249457;
-                var sc_invisible=0;
-                var sc_partition=59;
-                var sc_click_stat=1;
-                var sc_security="96b6bf18";
-                </script>
-            <script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-            <noscript>
-                <div class="statcounter">
-                    <a title="drupal stats" href="http://www.statcounter.com/drupal/" target="_blank">
-                        <img class="statcounter" src="http://c.statcounter.com/5249457/0/96b6bf18/0/" alt="drupal stats">
-                    </a>
-                </div>
-            </noscript>
+            
         </div>
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <!-- /container -->
