--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             I design and build embedded systems and wireless systems for applications in the Internet-of-Things.<br><br>
 
-            <address style="display: block;"> zhangelsu@gmail.com </address>
+            <address style="display: block;"> Email: zhangelsu@gmail.com </address>
 
             <ul class="nav nav-tabs"> 
                 <li class="active">
