--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             <h4 class="text-left text-primary">Selected publications <a style="display: inline-block;" href="./publication.html">(Full list)</a></h4>
             
             <div class="container">
+                <a style="display: inline-block;" href="">RF-CHORD: Towards Deployable RFID Localization System for Logistics Network</a><br>
+                Bo Liang, Purui Wang, Renjie Zhao, Heyu Guo, <b>Pengyu Zhang</b>, Junchen Guo, Shunming Zhu, Hongqiang Harry Liu, Xinyu Zhang, Chenren Xu<br>
+                NSDI 2023<br>
+            </div><br>
+            <div class="container">
                 <a style="display: inline-block;" href="">NFC+: Breaking NFC Networking Limits Through Resonance Engineering</a><br>
                 Renjie Zhao (Co-primary), Purui Wang (Co-primary), Yunfei Ma, <b>Pengyu Zhang</b>, Hongqiang Liu, Xianshang Lin, Xinyu Zhang, Chenren Xu and Ming Zhang<br>
                 SIGCOMM 2020<br>
