--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             <img src="images/internet_of_things.png" width="290" class="text-right pull-right">
             <img src="images/photo_suit.jpeg" width="200" class="pull-right">
             <h3 class="text-left text-primary">Pengyu Zhang</h3>
-            <address style="display: block;"> <br>I am a Staff Engineer at Alibaba Group Seattle Office. I was a postdoc researcher at Stanford working with <a style="display: inline-block;" href="http://stanford.edu/~skatti/">Sachin Katti</a>. I received my Ph.D. from UMass Amherst. My advisor was <a style="display: inline-block;" href="http://people.cs.umass.edu/~dganesan/">Deepak Ganesan</a>. I received my bachelor and master from Tsinghua University.</address>
-
-            I design and build embedded systems and wireless systems for applications in the Internet-of-Things.<br><br>
+            <address style="display: block;"> <br>I am a Senior Engineering Manager at Uber, where I lead teams in building large-scale, high-impact systems at the intersection of machine learning, distributed systems, and security applications. 
+                Previously, I was a Senior Engineering Manager and Staff Engineer at Alibaba Cloud in Seattle, where I drove the design and development of core infrastructure and cloud platform technologies. 
+                Before that, I was a postdoctoral researcher at Stanford University working with Sachin Katti. I earned my Ph.D. from UMass Amherst under the guidance of Deepak Ganesan, and my bachelor’s and master’s degrees from Tsinghua University.
+                <br><br>
 
             <address style="display: block;"> Email: zhangelsu@gmail.com </address>
 
