--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
             <img src="images/internet_of_things.png" width="290" class="text-right pull-right">
             <img src="images/photo_suit.jpeg" width="200" class="pull-right">
             <h3 class="text-left text-primary">Pengyu Zhang</h3>
-            <address style="display: block;"> <br>I am a Senior Engineering Manager at Uber, where I lead teams in building large-scale, high-impact systems at the intersection of machine learning, distributed systems, and security applications. 
+            <address style="display: block;"> <br>
+                I am a Senior Engineering Manager at Uber, where I lead teams in building large-scale systems at the intersection of machine learning, spanning both statistical/algorithmic methods and large language models, distributed systems, and security applications. 
+                <br><br>
                 Previously, I was a Senior Engineering Manager and Staff Engineer at Alibaba Cloud in Seattle, where I drove the design and development of core infrastructure and cloud platform technologies. 
+                <br><br>
                 Before that, I was a postdoctoral researcher at Stanford University working with Sachin Katti. I earned my Ph.D. from UMass Amherst under the guidance of Deepak Ganesan, and my bachelor’s and master’s degrees from Tsinghua University.
                 <br><br>
 
